test/libsolidity/syntaxTests/constants/mapping_constant.sol
mapping(uint => uint) constant b = b;
// ----
// DeclarationError 9259: (0-36): Constants of non-value type not yet implemented.
